feat: implement authentication context and tab navigation; update modal and input components

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
         "exclude": [
           "react-native-nfc-manager"
         ],
-        "listUnknownPackages": true
+        "listUnknownPackages": false
       }
     }
   }
