--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
     "expo": "~52.0.36",
+    "expo-build-properties": "~0.13.2",
     "expo-camera": "~16.0.17",
     "expo-dev-client": "~5.0.12",
     "expo-image": "~2.0.6",
-    "expo-image-picker": "~16.0.5",
+    "expo-image-picker": "~16.0.6",
     "expo-media-library": "~17.0.6",
     "expo-secure-store": "~14.0.0",
     "expo-sqlite": "~15.1.2",
     "expo-status-bar": "~2.0.0",
     "expo-web-browser": "~14.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-fs": "^2.20.0",
@@ -38,7 +40,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-signature-canvas": "^4.7.2"
+    "react-native-signature-canvas": "^4.7.2",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0"
