--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
-    "expo": "~52.0.36",
+    "expo": "~52.0.46",
     "expo-build-properties": "~0.13.2",
-    "expo-camera": "~16.0.17",
-    "expo-dev-client": "~5.0.12",
-    "expo-image": "~2.0.6",
+    "expo-camera": "~16.0.18",
+    "expo-dev-client": "~5.0.20",
+    "expo-image": "~2.0.7",
     "expo-image-picker": "~16.0.6",
     "expo-media-library": "~17.0.6",
     "expo-secure-store": "~14.0.0",
-    "expo-sqlite": "~15.1.2",
+    "expo-sqlite": "~15.1.4",
     "expo-status-bar": "~2.0.0",
     "expo-web-browser": "~14.0.2",
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-nfc-manager": "^3.16.1",
@@ -41,7 +41,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-signature-canvas": "^4.7.2",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "@sentry/react-native": "~6.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0"
