--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "@sentry/react-native": "~6.10.0",
+    "@stripe/stripe-react-native": "^0.46.0",
     "axios": "^1.7.9",
     "expo": "~52.0.46",
     "expo-build-properties": "~0.13.2",
@@ -26,6 +28,7 @@
     "expo-dev-client": "~5.0.20",
     "expo-image": "~2.0.7",
     "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
     "expo-media-library": "~17.0.6",
     "expo-secure-store": "~14.0.0",
     "expo-sqlite": "~15.1.4",
@@ -41,9 +44,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-signature-canvas": "^4.7.2",
-    "react-native-webview": "13.12.5",
-    "@sentry/react-native": "~6.10.0",
-    "expo-linear-gradient": "~14.0.2"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0"
