--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "@sentry/react-native": "~6.10.0",
-    "@stripe/stripe-react-native": "^0.46.0",
+    "@stripe/stripe-react-native": "0.38.6",
     "axios": "^1.7.9",
     "expo": "~52.0.46",
-    "expo-build-properties": "~0.13.2",
+    "expo-build-properties": "~0.13.3",
     "expo-camera": "~16.0.18",
     "expo-dev-client": "~5.0.20",
     "expo-image": "~2.0.7",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-media-library": "~17.0.6",
-    "expo-secure-store": "~14.0.0",
+    "expo-secure-store": "~14.0.1",
     "expo-sqlite": "~15.1.4",
     "expo-status-bar": "~2.0.0",
     "expo-web-browser": "~14.0.2",
@@ -56,7 +56,8 @@
         "enabled": true,
         "exclude": [
           "react-native-nfc-manager",
-          "react-native-fs"
+          "react-native-fs",
+          "jwt-decode"
         ],
         "listUnknownPackages": false
       }
