feat: Add NFC utilities and type definitions
- Implemented NFCTagData and NFCOperationResult interfaces for NFC data handling.
- Created CommonUtils.js with various utility functions including validation, formatting, and error handling.
- Developed FormValidation class for comprehensive form validation rules.
- Introduced NFCUtils class for managing NFC operations, including reading and writing NFC tags.
- Added TypeScript configuration for improved type checking and module resolution.

--- a/app.json
+++ b/app.json
@@ -55,6 +55,7 @@
         }
       ]
     ],
+    "scheme": "wrapbattz",
     "ios": {
       "jsEngine": "hermes",
       "supportsTablet": true,
@@ -62,6 +63,11 @@
         "usesNonExemptEncryption": false
       },
       "infoPlist": {
+        "CFBundleURLTypes": [
+          {
+            "CFBundleURLSchemes": ["wrapbattz"]
+          }
+        ],
         "NSCameraUsageDescription": "Allow $(PRODUCT_NAME) to access camera for device reporting.",
         "NSPhotoLibraryUsageDescription": "Allow $(PRODUCT_NAME) to access your photos for device reporting.",
         "NSPhotoLibraryAddUsageDescription": "Allow $(PRODUCT_NAME) to save photos for device reporting of photos taken..",
