--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:e2e": "detox test",
+    "test:e2e:build": "detox build",
+    "test:e2e:clean": "detox clean-framework-cache && detox build"
   },
   "dependencies": {
     "@expo/config-plugins": "^9.0.14",
@@ -47,7 +54,19 @@
     "react-native-webview": "13.12.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0"
+    "@babel/core": "^7.26.0",
+    "@testing-library/react-native": "^12.7.2",
+    "@tsconfig/react-native": "^3.0.5",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^18.3.23",
+    "@types/react-native": "^0.73.0",
+    "detox": "^20.39.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
+    "jest-environment-node": "^30.0.0-beta.3",
+    "react-test-renderer": "^18.3.1",
+    "ts-jest": "^29.3.4",
+    "typescript": "^5.8.3"
   },
   "private": true,
   "expo": {
@@ -62,5 +81,55 @@
         "listUnknownPackages": false
       }
     }
+  },
+  "jest": {
+    "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-native|@react-native|expo|@expo|@testing-library|@react-navigation|react-native-nfc-manager|@sentry|@react-native-async-storage|react-native-gesture-handler|react-native-reanimated|react-native-safe-area-context|react-native-screens|react-native-vector-icons)/)"
+    ],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "testMatch": [
+      "**/__tests__/**/*.(ts|tsx|js)",
+      "**/*.(test|spec).(ts|tsx|js)"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}",
+      "!src/**/*.d.ts",
+      "!src/tests/**/*",
+      "!src/**/__tests__/**/*"
+    ],
+    "coverageDirectory": "coverage",
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "html"
+    ],
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.(ts|tsx)$": [
+        "ts-jest",
+        {
+          "tsconfig": {
+            "jsx": "react",
+            "esModuleInterop": true,
+            "allowSyntheticDefaultImports": true
+          }
+        }
+      ],
+      "^.+\\.(js|jsx)$": "babel-jest"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
