--- a/package.json
+++ b/package.json
@@ -16,42 +16,41 @@
     "test:e2e:clean": "detox clean-framework-cache && detox build"
   },
   "dependencies": {
-    "@expo/config-plugins": "^9.0.14",
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-masked-view/masked-view": "^0.3.2",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
-    "@sentry/react-native": "~6.10.0",
-    "@stripe/stripe-react-native": "0.38.6",
+    "@sentry/react-native": "~7.2.0",
+    "@stripe/stripe-react-native": "0.50.3",
     "axios": "^1.7.9",
-    "expo": "~52.0.46",
-    "expo-build-properties": "~0.13.3",
-    "expo-camera": "~16.0.18",
-    "expo-dev-client": "~5.0.20",
-    "expo-image": "~2.0.7",
-    "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-media-library": "~17.0.6",
-    "expo-secure-store": "~14.0.1",
-    "expo-sqlite": "~15.1.4",
-    "expo-status-bar": "~2.0.0",
-    "expo-web-browser": "~14.0.2",
+    "expo": "^54.0.0",
+    "expo-build-properties": "~1.0.10",
+    "expo-camera": "~17.0.10",
+    "expo-dev-client": "~6.0.20",
+    "expo-image": "~3.0.11",
+    "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-media-library": "~18.2.1",
+    "expo-secure-store": "~15.0.8",
+    "expo-sqlite": "~16.0.10",
+    "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
     "jwt-decode": "^4.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-nfc-manager": "^3.16.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-signature-canvas": "^4.7.2",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
