feat: Upgrade to React 19.1.0 and add expo-font dependency
fix: Update CustomerSheetManager to use CustomerSheet API for managing payment methods

fix: Correct plan slug for yearly billing in SubscriptionSetup

fix: Adjust onboarding logic to prevent incorrect routing for admins

feat: Add logout functionality in CreateOrganizationScreen

refactor: Rename "Request Device" button to "Assign Device" in Header

fix: Update navigation flow in DataHandlingFeeScreen to replace current screen

feat: Add quick navigation links in DataHandlingFeeScreen

fix: Update ManageBillingScreen to handle subscription status more robustly

fix: Update ProfileScreen to fetch billing data from the correct endpoint

feat: Add createCustomerSession method in BillingService for customer session management

feat: Update BillingTypes to include CustomerSessionResponse interface

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "battwrapz",
     "slug": "battwrapz",
-    "version": "1.7.0",
+    "version": "1.7.5",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -32,8 +32,12 @@
         "react-native-nfc-manager",
         {
           "nfcPermission": "Allow $(PRODUCT_NAME) to access NFC features for device management.",
-          "selectIdentifiers": ["A0000002471001"],
-          "systemCodes": ["8008"],
+          "selectIdentifiers": [
+            "A0000002471001"
+          ],
+          "systemCodes": [
+            "8008"
+          ],
           "includeNdefEntitlement": false,
           "nfcReaderUsageDescription": "Allow $(PRODUCT_NAME) to read NFC tags as it is used with devices to assign to user."
         }
@@ -58,7 +62,8 @@
           "savePhotosPermission": "Allow $(PRODUCT_NAME) to save photos for device reporting of photos taken.",
           "isAccessMediaLocationEnabled": true
         }
-      ]
+      ],
+      "expo-font"
     ],
     "scheme": "wrapbattz",
     "ios": {
@@ -70,17 +75,23 @@
       "infoPlist": {
         "CFBundleURLTypes": [
           {
-            "CFBundleURLSchemes": ["wrapbattz"]
+            "CFBundleURLSchemes": [
+              "wrapbattz"
+            ]
           }
         ],
         "NSCameraUsageDescription": "Allow $(PRODUCT_NAME) to access camera for device reporting.",
         "NSPhotoLibraryUsageDescription": "Allow $(PRODUCT_NAME) to access your photos for device reporting.",
         "NSPhotoLibraryAddUsageDescription": "Allow $(PRODUCT_NAME) to save photos for device reporting of photos taken..",
         "NFCReaderUsageDescription": "Allow $(PRODUCT_NAME) to read NFC tags as it is used with devices to assign to user.",
-        "com.apple.developer.nfc.readersession.iso7816.select-identifiers": ["A0000002471001"]
+        "com.apple.developer.nfc.readersession.iso7816.select-identifiers": [
+          "A0000002471001"
+        ]
       },
       "entitlements": {
-        "com.apple.developer.nfc.readersession.formats": ["TAG"]
+        "com.apple.developer.nfc.readersession.formats": [
+          "TAG"
+        ]
       },
       "bundleIdentifier": "com.garanmayers7262.battwrapz"
     },
