--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "battwrapz",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "main": "index.js",
+  "overrides": {
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
+  },
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -32,6 +36,7 @@
     "expo-build-properties": "~1.0.10",
     "expo-camera": "~17.0.10",
     "expo-dev-client": "~6.0.20",
+    "expo-font": "~14.0.10",
     "expo-image": "~3.0.11",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
@@ -50,14 +55,15 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-signature-canvas": "^4.7.2",
-    "react-native-webview": "13.15.0"
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@testing-library/react-native": "^12.7.2",
     "@tsconfig/react-native": "^3.0.5",
     "@types/jest": "^29.5.14",
-    "@types/react": "^18.3.23",
+    "@types/react": "~19.1.10",
     "detox": "^20.39.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
