--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "expo-web-browser": "~15.0.10",
     "jwt-decode": "^4.0.0",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.28.0",
@@ -55,6 +56,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-signature-canvas": "^4.7.2",
+    "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1"
   },
