feat: Add visual change tracking to EditTab NFC editor
  - Add toggle delete behavior instead of immediate removal, allowing easy recovery
  - Track modified, added, and deleted fields with distinct visual indicators:
    - Modified fields: yellow/amber highlight
    - New fields: green highlight with divider section
    - Deleted fields: red highlight with strikethrough and restore button
  - Add change summary showing pending modifications before save
  - Reset change tracking state after successful write to tag
  - Update key rename handling to maintain tracking across field renames

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "battwrapz",
     "slug": "battwrapz",
-    "version": "1.7.5",
+    "version": "1.9.2",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -63,7 +63,22 @@
           "isAccessMediaLocationEnabled": true
         }
       ],
-      "expo-font"
+      "expo-font",
+      [
+        "@sentry/react-native/expo",
+        {
+          "url": "https://sentry.io/",
+          "project": "battwrapz",
+          "organization": "gmayers-services",
+          "uploadSourceMaps": false,
+          "android": {
+            "uploadSourceMaps": false
+          },
+          "ios": {
+            "uploadSourceMaps": false
+          }
+        }
+      ]
     ],
     "scheme": "wrapbattz",
     "ios": {
