--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
-    "@sentry/react-native": "~7.2.0",
+    "@sentry/react-native": "^7.11.0",
     "@stripe/stripe-react-native": "0.50.3",
     "axios": "^1.7.9",
-    "expo": "^54.0.0",
+    "expo": "~54.0.33",
     "expo-build-properties": "~1.0.10",
     "expo-camera": "~17.0.10",
     "expo-dev-client": "~6.0.20",
-    "expo-font": "~14.0.10",
+    "expo-font": "~14.0.11",
     "expo-image": "~3.0.11",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
@@ -76,6 +76,11 @@
   },
   "private": true,
   "expo": {
+    "install": {
+      "exclude": [
+        "@sentry/react-native"
+      ]
+    },
     "doctor": {
       "reactNativeDirectoryCheck": {
         "enabled": true,
