feat: Add EAS Updates, enhance NFC services, billing, and multiple screens
- Add expo-updates with automatic update check on app launch
- Configure EAS channels (development, preview, production) and runtime versioning
- Enhance NFCSecurityService with improved NTAG detection and lock/unlock
- Refactor NFCService with better decoding fallbacks and retry logic
- Improve BillingService with additional endpoints
- Remove duplicate Manage Payment Methods button, fix icon prop in CustomerSheetManager
- Enhance AddDeviceScreen, CreateOrganizationScreen, RegisterScreen
- Update AllReportsScreen and ManageBillingScreen
- Improve useDevices and useLocations hooks
- Update FormatTab and NFCManagerModal
- Update AuthFlow integration tests and jest.setup.js mocks
- Streamline CLAUDE.md documentation
- Bump version to 1.9.5

--- a/app.json
+++ b/app.json
@@ -2,11 +2,18 @@
   "expo": {
     "name": "battwrapz",
     "slug": "battwrapz",
-    "version": "1.9.2",
+    "owner": "garanmayers7262",
+    "version": "1.9.5",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "jsEngine": "hermes",
+    "updates": {
+      "url": "https://u.expo.dev/4bfa6fa2-5c17-44a2-b424-a811fbdceec4"
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
